<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".StartActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="66dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="fill"
        android:maxLines="1"
        android:text="@string/welcome_to_quickchat_app"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="142dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="257dp"
        android:background="@drawable/oval"
        android:backgroundTint="#EC1D1D"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="143dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:background="@drawable/oval"
        android:backgroundTint="#FFFFFF"
        android:text="@string/login" />
</RelativeLayout>