<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_display_pic"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="77dp"
        android:background="#FFFFFF"
        android:src="@drawable/dpp" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="350dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="273dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/hey_there_i_m_using_quickchat_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_change_img"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="167dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:background="#D81818"
        android:text="@string/change_status" />

</RelativeLayout>

