<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"

        app:title="Login"
        app:titleTextColor="#000000"></include>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="328dp"
        android:layout_height="59dp"

        android:fontFamily="monospace"
        android:gravity="fill|left"
        android:text="@string/login_to_your_account"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_marginBottom="412dp"

        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_passwd"
        android:layout_width="368dp"
        android:layout_height="54dp"

        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.103"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DD1C0D"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.357"
        android:background="@drawable/oval"/>


</androidx.constraintlayout.widget.ConstraintLayout>