<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"
        android:background="#9C27B0"
        android:backgroundTint="#9C27B0"
        app:title="Create Account"
        app:titleTextColor="#070000"></include>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:background="#9C27B0"
        android:text="@string/create_a_new_account"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_fullname"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:background="#F8F1F1"
        android:textColorHint="#000000"
        app:hintTextColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.097">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="#FFFFFF"
            android:hint="@string/full_name"
            android:textColorHighlight="#F8F0F0"
            android:textColorHint="#000000"
            android:textColorLink="#E4E0E0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:background="#F6EEEE"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_fullname"
        app:layout_constraintVertical_bias="0.078">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_passwd"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:background="#FBF5F5"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.092">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DD1C0D"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.315" />


</androidx.constraintlayout.widget.ConstraintLayout>